# MeStore

./: "$LOG_FILE"  .codecov.yml  .coverage  .coveragerc  .dockerignore  .env.development  .env.example  .env.production  .env.production.template  .env.security.example  .env.staging.template  .env.template  .env.testing  .env.twilio.example  .gitignore  .gitmessage  .pre-commit-config.yaml  =23.0.0  ADMIN_ORDERS_IMPLEMENTATION_SUMMARY.md  API_ARCHITECTURE_DIAGRAM.md  API_DUPLICATIONS_ANALYSIS.md  API_ROADMAP_POST_MVP.md  BACKEND_API_MVP_AUDIT_REPORT.md  BACKEND_API_QUICK_SUMMARY.md  BACKEND_STRUCTURE_ANALYSIS.md  BEFORE_AFTER_COMPARISON.md  BUYER_DASHBOARD_COMPLETION_SUMMARY.md  BUYER_DASHBOARD_EXECUTIVE_SUMMARY.md  BUYER_DASHBOARD_INTEGRATION_SUMMARY.md  CATALOG_FIXES_COMPLETE_REPORT.md  CHECKOUT_AUTH_FIX_SUMMARY.md  CHECKOUT_DEBUG_OVERLAY_INVESTIGATION.md  CHECKOUT_OVERLAY_FIX_GUIDE.md  CHECKOUT_PSE_FIX_SUMMARY.md  CHECKOUT_VALIDATION_GUIDE.md  CLAUDE.md  COMPREHENSIVE_ADMIN_SECURITY_AUDIT_REPORT.md  COMPREHENSIVE_PAYMENT_API_TEST_REPORT.md  CONFIGURATION_MANAGEMENT_IMPLEMENTATION.md  COVERAGE_ANALYSIS.md  (+257 more)
.workspace/surgical_modifier/: .gitignore  ComponentForm.tsx  ComponentLayout.tsx  ComponentModal.tsx  EXAMPLES.md  FinalJSXTest.jsx  FinalPythonTest.py  FinalTSXTest.tsx  README.md  TEMPLATE_LITERALS_GUIDE.md  TODO.md  TestBasic.tsx  TestForm.tsx  TestLayout.tsx  TestModal.tsx  VerifyForm.tsx  VerifyLayout.tsx  VerifyModal.tsx  __init__.py  __main__.py  audit_project.py  cleanup_project.py  cli.py  cli.py.backup_verbose_fix  cli.py.corrupted_backup  cli_debug.py  cli_enhancement.py  cli_original_backup.py  cli_v6.0_template_fix_WORKING.py  complete_tab_method.txt  complex_test.py  config.py  config.py.corrupted  debug_rollback.js  debug_test.jsx  final_integration_test.py  final_python.py  final_react.tsx  final_test.jsx  final_test.py  (+150 more)
.workspace/surgical_modifier/.backups/: cli.py.backup.1756154900  pyproject.toml.backup.1756156763  temp_verify.py.backup.1756187005.050db33a  temp_verify_restructure.py.backup.1756187569.028b484c  test_full.py.backup.1756186078.5fb8e44a  test_pattern.txt.backup.1756185643.be488686  test_syntax.py.backup.1756186041.f3845d18  test_temp_pre_migration.py.backup.1756184101.cc78c828
.workspace/surgical_modifier/coordinators/: after.py  before.py  coordinator_router.py  create.py  example.py  prototype_create.py  prototype_replace.py  replace.py  typescript_react.py
.workspace/surgical_modifier/core/: __init__.py  argument_parser.py  operations_registry.py  operations_registry.py.backup.broken  operations_registry_enhancement.py
.workspace/surgical_modifier/docs/: ARCHITECTURE.md  PYTHON_GUIDE.md  REACT_GUIDE.md  TYPESCRIPT_GUIDE.md  USE_CASES.md  examples.md  functions.md
.workspace/surgical_modifier/plugins/: __init__.py  example_plugin.py
.workspace/surgical_modifier/reports/: cleanup_report_20250825_234521.json  project_audit.json
(+2778 files in other folders)
