[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surgical_modifier"
version = "0.1.0"
description = "Sistema de Modificación Precisa de Código"
dependencies = ["click>=8.0.0", "colorama>=0.4.0", "pyyaml>=6.0", "rich>=13.0.0"]

[project.scripts]
surgical-modifier = "surgical_modifier_pkg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["surgical_modifier_pkg*"]
